--- a/.github/workflows/deploy-zombie-page.yml
+++ b/.github/workflows/deploy-zombie-page.yml
@@ -1,9 +1,9 @@
-name: Generate Zombie Hacker Animation
+name: Deploy Zombie Hacker Interactive Page
 
 on:
   # run automatically every 12 hours
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "30 */12 * * *"  # Offset by 30 minutes from snake generation
   
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -14,11 +14,13 @@ on:
     - main
 
 jobs:
-  generate:
+  deploy:
     permissions:
       contents: write
+      pages: write
+      id-token: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
     
     steps:
       - name: Checkout repository 🔄
@@ -33,18 +35,11 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ github.repository_owner }}
         run: |
-          echo "🧟‍♂️ Fetching contribution data for zombie infiltration..."
+          echo "🧟‍♂️ Zombie Hacker initiating GitHub infiltration..."
           node scripts/fetchContributions.js
 
-      - name: Generate zombie hacker animation 🎨
-        run: |
-          echo "🎨 Generating custom zombie hacker SVG animation..."
-          node scripts/generateZombieHacker.js
-      
-      - name: Push zombie animation to output branch 🚀
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Deploy to GitHub Pages 🚀
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
