--- a/.github/workflows/deploy-zombie-page.yml
+++ b/.github/workflows/deploy-zombie-page.yml
@@ -34,12 +34,26 @@ jobs:
       - name: Fetch GitHub contributions data 🧟‍♂️
         env:
           GITHUB_USERNAME: ${{ github.repository_owner }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "🧟‍♂️ Zombie Hacker initiating GitHub infiltration..."
           node scripts/fetchContributions.js
+
+      - name: Generate zombie hacker animation 🎨
+        run: |
+          echo "🎨 Generating custom zombie hacker SVG animation..."
+          node scripts/generateZombieHacker.js
 
       - name: Deploy to GitHub Pages 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+
+      - name: Push zombie animation to output branch 🚀
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
