--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node scripts/zombieSnk.js"
   },
   "type": "module",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  },
   "author": "Nicholas Dobson",
   "license": "MIT"
 }
