--- a/.github/workflows/zombie-snake.yml
+++ b/.github/workflows/zombie-snake.yml
@@ -17,6 +17,8 @@ jobs:
   generate:
     permissions:
       contents: write
+      pages: write
+      id-token: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
     
@@ -46,4 +48,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
